fea: add new api route for fetching all of user article
