# src/entities/articles/route.path.js
@@ -1,4 +1,5 @@
 export const ARTICLE_ROUTES = {
+  articleAuthorAll: '/article/all',
   articles: '/articles',
   articlePreviewBySlug: '/articles/:slug',
   articleById: '/articles/id/:id',
